# LFTC-Laborator6

./: CMakeLists.txt  README.MD  analizor.l  analizor.y  comenzi.md  lex.yy.c  main.cpp  out.asm  parser.tab.c  parser.tab.h  test1.min  test2.min
